
<?xml version="1.0"?>
<package format="3">
  <name>stereo_depth</name>
  <version>1.0.0</version>
  <description>Classical stereo depth estimation node</description>
  <maintainer email="alfredo.rivero@outlook.com">Alfredo Rivero</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>